--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 
 <body>
     <nav>
-        <h3>
+        <h3>G3 Architects</h3>
 
-        </h3>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">Login</a></li>
+        </ul>
 
     </nav>
 </body>
