--- a/index.html
+++ b/index.html
@@ -9,17 +9,41 @@
 </head>
 
 <body>
-    <nav>
-        <h3>G3 Architects</h3>
+    <header>
+        <nav>
 
-        <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="">Login</a></li>
-        </ul>
+            <h3 class="nav-title">G3 Architects</h3>
 
-    </nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">Login</a></li>
+            </ul>
+
+        </nav>
+        <!-- Banner Section -->
+        <div class="banner">
+
+
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New Group of Architects
+                </h1>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look
+                    even</p>
+
+                <button class="btn-primary">Exprole more</button>
+            </div>
+
+            <img src="images/banner.png" alt="">
+
+
+        </div>
+
+    </header>
+
 </body>
 
 </html>
